# systemc_riscv_xilinx_qemu

./: .gitmodules  build_baremetal.sh  build_platform.sh  build_qemu.sh  build_systemc.sh  run_qemu.sh
src/: CMakeLists.txt  qemu_cosim.cpp  qemu_cosim.h  sc_main.cpp  target_systemc.cpp  target_systemc.h  top.cpp  top.h
